Trying to fix safari overlap again

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
 
 @media (pointer: coarse) and (orientation: landscape) {
   #game {
-    height: calc(100dvh - 45px);
-    width: calc((100dvh - 45px) * (4 / 3));
+    height: calc(100dvh);
+    width: calc((100dvh) * (4 / 3));
   }
 }
